Start working towards proto 1.5 (#1379)
Signed-off-by: Pablo Herrera <pabloherrerapalacio@gmail.com>